; ModuleID = '/home/carl/AnghaBench/toxcore/toxav/extr_audio.c_jbuf_clear.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxav/extr_audio.c_jbuf_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.JitterBuffer = type { i64, i64, i64, i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.JitterBuffer*)* @jbuf_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jbuf_clear(%struct.JitterBuffer* %0) #0 {
  %2 = alloca %struct.JitterBuffer*, align 8
  store %struct.JitterBuffer* %0, %struct.JitterBuffer** %2, align 8
  br label %3

3:                                                ; preds = %51, %1
  %4 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %5 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %8 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %6, %9
  br i1 %10, label %11, label %56

11:                                               ; preds = %3
  %12 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %13 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %12, i32 0, i32 3
  %14 = load i32**, i32*** %13, align 8
  %15 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %16 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %19 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = urem i64 %17, %20
  %22 = getelementptr inbounds i32*, i32** %14, i64 %21
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %50

25:                                               ; preds = %11
  %26 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %27 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %26, i32 0, i32 3
  %28 = load i32**, i32*** %27, align 8
  %29 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %30 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %33 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %32, i32 0, i32 2
  %34 = load i64, i64* %33, align 8
  %35 = urem i64 %31, %34
  %36 = getelementptr inbounds i32*, i32** %28, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = call i32 @free(i32* %37)
  %39 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %40 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %39, i32 0, i32 3
  %41 = load i32**, i32*** %40, align 8
  %42 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %43 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %46 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %45, i32 0, i32 2
  %47 = load i64, i64* %46, align 8
  %48 = urem i64 %44, %47
  %49 = getelementptr inbounds i32*, i32** %41, i64 %48
  store i32* null, i32** %49, align 8
  br label %50

50:                                               ; preds = %25, %11
  br label %51

51:                                               ; preds = %50
  %52 = load %struct.JitterBuffer*, %struct.JitterBuffer** %2, align 8
  %53 = getelementptr inbounds %struct.JitterBuffer, %struct.JitterBuffer* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = add i64 %54, 1
  store i64 %55, i64* %53, align 8
  br label %3

56:                                               ; preds = %3
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
